CU-868dthw1j - onclick handlers using incorrect function names

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -59,7 +59,7 @@
                     src="../images/product1.jpg"
             />
         </div>
-        <div class="thumbnail-gallery">
+        <div class="thumbnail">
             <!-- Intentional bug: onclick handlers using incorrect function names -->
             <img
                     alt="Wireless Headphones - Front"
