CU-868dthw4h - using classes inconsistently

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -59,7 +59,7 @@
                     src="../images/product1.jpg"
             />
         </div>
-        <div class="thumbnail">
+        <div class="thumbnail-gallery">
             <!-- Intentional bug: onclick handlers using incorrect function names -->
             <img
                     alt="Wireless Headphones - Front"
@@ -134,7 +134,7 @@
                             style="background-color: #fff; border: 1px solid #ddd"
                     ></div>
                     <div
-                            class="color-choice"
+                            class="color-option"
                             data-color="blue"
                             style="background-color: #0078d4"
                     ></div>
@@ -151,7 +151,7 @@
                                                      min="1"
                                                      type="text"
                                                      value="1"/>
-                <button class="quantity-btn" id="increase-quantity">+</button>
+                <button class="quantity-btn" id="increase-qty">+</button>
             </div>
         </div>
         <div class="purchase-actions">
@@ -491,7 +491,7 @@
 
     <section class="recently-viewed">
         <h2>You Recently Viewed</h2>
-        <div class="product-grid">
+         <div class="product-grid">
             <div class="product-card">
                 <div class="product-image">
                     <img alt="Smart Watch" src="../images/product2.jpg"/>
@@ -611,7 +611,7 @@
 
 <!-- Intentional bug: loading scripts in incorrect order -->
 <script src="../js/main.js"></script>
-<script src="../js/product-detail.js"></script>
 <script src="../js/cart.js"></script>
+<script src="../js/product-detail.js"></script>
 </body>
 </html>
