CU-868dthw1j - onclick handlers using incorrect function names

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -82,7 +82,7 @@
             <img
                     alt="Wireless Headphones - Case"
                     class="thumbnail"
-                    onclick="switchImage(this)"
+                    onclick="changeMainImg(this)"
                     src="../images/product1-case.jpg"
             />
         </div>
