--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -64,13 +64,13 @@
             <img
                     alt="Wireless Headphones - Front"
                     class="thumbnail active"
-                    onclick="changeMainImage(this)"
+                    onclick="changeMainImg(this)"
                     src="../images/product1.jpg"
             />
             <img
                     alt="Wireless Headphones - Side"
                     class="thumbnail"
-                    onclick="changeMainImage(this)"
+                    onclick="changeMainImg(this)"
                     src="../images/product1-side.jpg"
             />
             <img
@@ -122,7 +122,6 @@
             <div class="color-options">
                 <h3>Color:</h3>
                 <div class="color-selector">
-                    <!-- Intentional bug: using classes inconsistently -->
                     <div
                             class="color-option selected"
                             data-color="black"
@@ -144,7 +143,6 @@
         <div class="quantity-selector">
             <h3>Quantity:</h3>
             <div class="quantity-controls">
-                <!-- Intentional bug: decrease button has incorrect id -->
                 <button class="quantity-btn" id="decrease-quantity">-</button>
                 <label for="quantity"></label><input id="quantity"
                                                      max="10"
@@ -414,6 +412,10 @@
                             checkout.
                         </p>
                         <!-- Intentional bug: missing contact information for warranty claims -->
+                        <div class="warranty-contact">
+                            Email:info@shopease.com
+                            Phone:123-456-7890
+                        </div>
                     </div>
                 </div>
             </div>
