--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -35,7 +35,7 @@
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
         </div>
-        <div class="cart-dropdown" style="display: none">
+        <div class="cart-dropdown">
           <div class="cart-items">
             <!-- Cart items will be added here by JavaScript -->
           </div>
@@ -47,7 +47,7 @@
       </div>
     </header>
 
-    <main class="product-detail-container">
+    <main class="container">
       <div class="product-images">
         <div class="main-image">
           <!-- Intentional bug: image will be loaded through JavaScript but with incorrect selector -->
@@ -557,8 +557,8 @@
         <div class="footer-column">
           <h3>Shop</h3>
           <ul>
-            <li><a href="pages/products.html">All Products</a></li>
-            <li><a href="pages/categories.html">Categories</a></li>
+            <li><a href="products.html">All Products</a></li>
+            <li><a href=categories.html">Categories</a></li>
             <li><a href="pages/deals.html">Deals</a></li>
             <li><a href="pages/new-arrivals.html">New Arrivals</a></li>
           </ul>
