CU-868dp2056 - Create a about page; CU-868dtw57y - Create contact page;

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -79,8 +79,8 @@
         <div class="footer-column">
           <h3>Shop</h3>
           <ul>
-            <li><a href="pages/products.html">All Products</a></li>
-            <li><a href="pages/categories.html">Categories</a></li>
+            <li><a href="products.html">All Products</a></li>
+            <li><a href="categories.html">Categories</a></li>
             <li><a href="pages/deals.html">Deals</a></li>
             <li><a href="pages/new-arrivals.html">New Arrivals</a></li>
           </ul>
