--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -559,26 +559,26 @@
           <ul>
             <li><a href="products.html">All Products</a></li>
             <li><a href=categories.html">Categories</a></li>
-            <li><a href="pages/deals.html">Deals</a></li>
-            <li><a href="pages/new-arrivals.html">New Arrivals</a></li>
+            <li><a href="deals.html">Deals</a></li>
+            <li><a href="new-arrivals.html">New Arrivals</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h3>Customer Service</h3>
           <ul>
-            <li><a href="pages/contact.html">Contact Us</a></li>
-            <li><a href="pages/faq.html">FAQ</a></li>
-            <li><a href="pages/shipping.html">Shipping & Returns</a></li>
-            <li><a href="pages/terms.html">Terms & Conditions</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="shipping.html">Shipping & Returns</a></li>
+            <li><a href="terms.html">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h3>About Us</h3>
           <ul>
-            <li><a href="pages/about.html">Our Story</a></li>
-            <li><a href="pages/blog.html">Blog</a></li>
-            <li><a href="pages/careers.html">Careers</a></li>
-            <li><a href="pages/partners.html">Partners</a></li>
+            <li><a href="about.html">Our Story</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="partners.html">Partners</a></li>
           </ul>
         </div>
         <div class="footer-column">
