--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         <h2>Subscribe to Our Newsletter</h2>
         <p>Get updates on new products, special offers, and more.</p>
         <form id="newsletter-form">
+          <label for="newsletter-email"></label>
           <input
             type="email"
             placeholder="Enter your email"
