Refactor newsletter form structure and update VCS directory mapping

--- a/index.html
+++ b/index.html
@@ -238,18 +238,13 @@
         <h2>Subscribe to Our Newsletter</h2>
         <p>Get updates on new products, special offers, and more.</p>
         <form id="newsletter-form">
-<<<<<<< HEAD
-          <label for="newsletter-email"></label><input
-                id="newsletter-email"
-=======
-          <label for="newsletter-email"></label>
-          <input
-            type="email"
->>>>>>> CU-868dp7v70_Create-a-categories-page_Omegea-Hunter
-            placeholder="Enter your email"
-            required
-                type="email"
-          />
+          <label>
+            <input
+              type="email"
+              placeholder="Enter your email"
+              required
+            />
+          </label>
           <button type="submit">Subscribe</button>
         </form>
         <div id="newsletter-success"></div>
