--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
         <h2>Subscribe to Our Newsletter</h2>
         <p>Get updates on new products, special offers, and more.</p>
         <form id="newsletter-form">
-          <label>
-            <input
-              type="email"
-              placeholder="Enter your email"
-              required
-            />
-          </label>
+          <label for="newsletter-email"></label>
+          <input
+            type="email"
+            id="newsletter-email"
+            placeholder= "Enter your email"
+            required
+          />
           <button type="submit">Subscribe</button>
         </form>
         <div id="newsletter-success"></div>
