--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,37 @@
     <title>About Shopease</title>
 </head>
 <body>
-<header></header>
+ <header>
+      <div class="logo-container">
+        <img alt="ShopEase Logo" class="logo" src="images/ShopEase-logo.svg"/>
+      </div>
+      <nav class="main-nav">
+        <ul id="nav-items">
+          <li class="nav-item"><a class="active" href="index.html">Home</a></li>
+          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item">
+            <a href="pages/categories.html">Categories</a>
+          </li>
+          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
+          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="cart-container">
+        <div class="cart-icon">
+          <i class="fas fa-shopping-cart"></i>
+          <span class="cart-count">0</span>
+        </div>
+        <div class="cart-dropdown" style="display: none">
+          <div class="cart-items">
+            <!-- Cart items will be added here by JavaScript -->
+          </div>
+          <div class="cart-total">
+            <p>Total: $<span id="cart-total-amount">0.00</span></p>
+          </div>
+          <button class="checkout-btn">Checkout</button>
+        </div>
+      </div>
+    </header>
 <main></main>
 
 </body>
