CU-868dtwwvd - Add a footer from the index page

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,9 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="about-section"></div>
+    </main>
     <footer>
       <div class="footer-columns">
         <div class="footer-column">
