CU-868dtwwvd - Add a footer from the index page;CU-868dp663j - Add a career section;

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <div class="about-section"></div>
+      <div class="partners-section"></div>
+      <div class="careers-section"></div>
     </main>
     <footer>
       <div class="footer-columns">
