--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blog</title>
-</head>
-<body>
-<header></header>
-<main></main>
-
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="logo-container">
+        <img alt="ShopEase Logo" class="logo" src="images/ShopEase-logo.svg" />
+      </div>
+      <nav class="main-nav">
+        <ul id="nav-items">
+          <li class="nav-item"><a class="active" href="index.html">Home</a></li>
+          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item">
+            <a href="pages/categories.html">Categories</a>
+          </li>
+          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
+          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="cart-container">
+        <div class="cart-icon">
+          <i class="fas fa-shopping-cart"></i>
+          <span class="cart-count">0</span>
+        </div>
+        <div class="cart-dropdown" style="display: none">
+          <div class="cart-items">
+            <!-- Cart items will be added here by JavaScript -->
+          </div>
+          <div class="cart-total">
+            <p>Total: $<span id="cart-total-amount">0.00</span></p>
+          </div>
+          <button class="checkout-btn">Checkout</button>
+        </div>
+      </div>
+    </header>
+    <main></main>
+  </body>
 </html>
