Refactor product range inputs and add product cards to the products page; update navigation links in about and blog pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,21 +5,35 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About Shopease</title>
+     <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="../css/shop-sidebar.css" />
+    <link rel="stylesheet" href="../css/products.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <script src="../js/main.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
+    <script src="../js/cart.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img alt="ShopEase Logo" class="logo" src="images/ShopEase-logo.svg" />
+        <img alt="ShopEase Logo" class="logo" src="../images/ShopEase-logo.svg" />
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a class="active" href="index.html">Home</a></li>
-          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item"><a class="active" href="../index.html">Home</a></li>
+          <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
-            <a href="pages/categories.html">Categories</a>
+            <a href="categories.html">Categories</a>
           </li>
-          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
-          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+          <li class="nav-item"><a href="about.html">About Us</a></li>
+          <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="cart-container">
