--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,21 +5,35 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blog</title>
+     <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="../css/shop-sidebar.css" />
+    <link rel="stylesheet" href="../css/products.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <script src="../js/main.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
+    <script src="../js/cart.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img alt="ShopEase Logo" class="logo" src="images/ShopEase-logo.svg" />
+        <img alt="ShopEase Logo" class="logo" src="../images/ShopEase-logo.svg" />
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a class="active" href="index.html">Home</a></li>
-          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item"><a class="active" href=../index.html">Home</a></li>
+          <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
-            <a href="pages/categories.html">Categories</a>
+            <a href="categories.html">Categories</a>
           </li>
-          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
-          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+          <li class="nav-item"><a href="about.html">About Us</a></li>
+          <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="cart-container">
@@ -27,7 +41,7 @@
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
         </div>
-        <div class="cart-dropdown" style="display: none">
+        <div class="cart-dropdown">
           <div class="cart-items">
             <!-- Cart items will be added here by JavaScript -->
           </div>
@@ -44,28 +58,28 @@
         <div class="footer-column">
           <h3>Shop</h3>
           <ul>
-            <li><a href="pages/products.html">All Products</a></li>
-            <li><a href="pages/categories.html">Categories</a></li>
-            <li><a href="pages/deals.html">Deals</a></li>
-            <li><a href="pages/new-arrivals.html">New Arrivals</a></li>
+            <li><a href="products.html">All Products</a></li>
+            <li><a href="categories.html">Categories</a></li>
+            <li><a href="deals.html">Deals</a></li>
+            <li><a href="new-arrivals.html">New Arrivals</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h3>Customer Service</h3>
           <ul>
-            <li><a href="pages/contact.html">Contact Us</a></li>
-            <li><a href="pages/faq.html">FAQ</a></li>
-            <li><a href="pages/shipping.html">Shipping & Returns</a></li>
-            <li><a href="pages/terms.html">Terms & Conditions</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="shipping.html">Shipping & Returns</a></li>
+            <li><a href="terms.html">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h3>About Us</h3>
           <ul>
-            <li><a href="pages/about.html">Our Story</a></li>
-            <li><a href="pages/blog.html">Blog</a></li>
-            <li><a href="pages/careers.html">Careers</a></li>
-            <li><a href="pages/partners.html">Partners</a></li>
+            <li><a href="about.html">Our Story</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="partners.html">Partners</a></li>
           </ul>
         </div>
         <div class="footer-column">
