--- a/pages/products.html
+++ b/pages/products.html
@@ -82,20 +82,24 @@
               <div></div>
             </div>
             <div class="range-input">
-              <input
-                type="range"
-                class="range-min"
-                min="0"
-                max="10000"
-                value="2500"
-              />
-              <input
-                type="range"
-                class="range-max"
-                min="100"
-                max="10000"
-                value="7500"
-              />
+              <label>
+                <input
+                  type="range"
+                  class="range-min"
+                  min="0"
+                  max="10000"
+                  value="2500"
+                />
+              </label>
+              <label>
+                <input
+                  type="range"
+                  class="range-max"
+                  min="100"
+                  max="10000"
+                  value="7500"
+                />
+              </label>
             </div>
             <div>
               <div>
@@ -366,6 +370,367 @@
             </button>
           </div>
         </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+         <div class="product-card">
+          <div class="product-image">
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Wireless Headphones</h3>
+            <div class="product-price">
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <span class="rating-count">(42)</span>
+            </div>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+
       </div>
     </main>
 
