CU-868du0jej - Added the blog card

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -27,7 +27,7 @@
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a class="active" href=../index.html">Home</a></li>
+          <li class="nav-item"><a class="active" href="/">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
             <a href="categories.html">Categories</a>
@@ -52,7 +52,25 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="blog-grid">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://images.unsplash.com/photo-165" alt=""/>
+          </div>
+          <div class="blog-details">
+            <h2 class="blog-title">Blog Title</h2>
+            <p class="blog-date">10/10/2025</p>
+            <p class="blog-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            </p>
+        </div>
+          <button>
+
+          </button>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="footer-columns">
         <div class="footer-column">
