Update navigation link in blog page and modify active link color in styles

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -27,7 +27,7 @@
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a class="active" href="/">Home</a></li>
+          <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
             <a href="categories.html">Categories</a>
