--- a/pages/blog.html
+++ b/pages/blog.html
@@ -29,9 +29,7 @@
         <ul id="nav-items">
           <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
-          <li class="nav-item">
-            <a href="categories.html">Categories</a>
-          </li>
+          <li class="nav-item"><a href="categories.html">Categories</a></li>
           <li class="nav-item"><a href="about.html">About Us</a></li>
           <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
@@ -66,7 +64,7 @@
             </p>
         </div>
           <button>
-
+<a href="blog-post.html">Read More</a>
           </button>
         </div>
       </div>
