Update navigation links and improve image sources across multiple pages

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
-    <link rel="stylesheet" href="../css/shop-sidebar.css" />
     <link rel="stylesheet" href="../css/products.css" />
     <link
       rel="stylesheet"
@@ -17,7 +16,6 @@
     <script src="../js/main.js" async defer></script>
     <script src="../js/products.js" async defer></script>
     <script src="../js/cart.js" async defer></script>
-    <script src="../js/products.js" async defer></script>
   </head>
   <body>
     <header>
@@ -56,19 +54,19 @@
         <h1>Categories</h1>
         <div class="category-grid">
           <div class="category-card">
-            <img src="/images/100x100px.png" alt="Category 1" />
+            <img src="https://images.unsplash.com/photo-1515940175183-6798529cb860?q=80&w=2829&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"" alt="Category 1" />
             <h3>Electronics</h3>
           </div>
           <div class="category-card">
-            <img src="/images/100x100px.png" alt="Category 2" />
+            <img src="https://images.unsplash.com/photo-1666358052008-a9a1ecda7885?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Category 2" />
             <h3>Clothing</h3>
           </div>
           <div class="category-card">
-            <img src="/images/100x100px.png" alt="Category 3" />
+            <img src="https://cdn.pixabay.com/photo/2021/12/22/02/56/interior-6886565_1280.jpg" alt="Category 3" />
             <h3>Home & Garden</h3>
           </div>
           <div class="category-card">
-            <img src="/images/100x100px.png" alt="Category 4" />
+            <img src="https://images.unsplash.com/photo-1642326828805-0d3251cc250f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Category 4" />
             <h3>Sports</h3>
           </div>
         </div>
@@ -88,7 +86,7 @@
         <div class="footer-column">
           <h3>Customer Service</h3>
           <ul>
-            <li><a href="pages/contact.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="pages/faq.html">FAQ</a></li>
             <li><a href="pages/shipping.html">Shipping & Returns</a></li>
             <li><a href="pages/terms.html">Terms & Conditions</a></li>
@@ -97,10 +95,10 @@
         <div class="footer-column">
           <h3>About Us</h3>
           <ul>
-            <li><a href="pages/about.html">Our Story</a></li>
-            <li><a href="pages/blog.html">Blog</a></li>
-            <li><a href="pages/careers.html">Careers</a></li>
-            <li><a href="pages/partners.html">Partners</a></li>
+            <li><a href="about.html">Our Story</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="pages/about.html#careers">Careers</a></li>
+            <li><a href="pages/about.html#partners">Partners</a></li>
           </ul>
         </div>
         <div class="footer-column">
