--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>ShopEase - Your One-Stop Shop</title>
     <link href="css/styles.css" rel="stylesheet"/>
     <link href="css/responsive.css" rel="stylesheet"/>
