--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
-    <link rel="stylesheet" href="../css/shop-sidebar.css" />
     <link rel="stylesheet" href="../css/products.css" />
     <link
       rel="stylesheet"
@@ -27,7 +26,7 @@
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a href="../index.html">Home</a></li>
+          <li class="nav-item"><a href="/index.html">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item"><a href="categories.html">Categories</a></li>
           <li class="nav-item"><a href="about.html">About Us</a></li>
