--- a/pages/products.html
+++ b/pages/products.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
-    <link rel="stylesheet" href="../css/shop-sidebar.css" />
     <link rel="stylesheet" href="../css/products.css" />
     <link
       rel="stylesheet"
@@ -18,19 +17,18 @@
     <script src="../js/main.js" async defer></script>
     <script src="../js/products.js" async defer></script>
     <script src="../js/cart.js" async defer></script>
-    <script src="../js/products.js" async defer></script>
   </head>
 
   <body>
     <!-- Header -->
     <header>
       <div class="logo-container">
-        <img src="/images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
+        <img src="../images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
       </div>
       <!-- Navigation -->
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a href="/" class="active">Home</a></li>
+          <li class="nav-item"><a href="/index.html" class="active">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
             <a href="categories.html">Categories</a>
@@ -45,7 +43,7 @@
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
         </div>
-        <div class="cart-dropdown" style="display: none">
+        <div class="cart-dropdown">
           <div class="cart-items">
             <!-- Cart items will be added here by JavaScript -->
           </div>
