Update footer links in categories page to simplify navigation

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -97,8 +97,8 @@
           <ul>
             <li><a href="about.html">Our Story</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="pages/about.html#careers">Careers</a></li>
-            <li><a href="pages/about.html#partners">Partners</a></li>
+            <li><a href="about.html">Careers</a></li>
+            <li><a href="about.html">Partners</a></li>
           </ul>
         </div>
         <div class="footer-column">
