--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <script src="js/main.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/products.js"></script>
+    <script src="js/product-detail.js"></script>
   </head>
   <body>
     <header>
@@ -304,8 +308,5 @@
         <p>&copy; 2025 ShopEase. All Rights Reserved.</p>
       </div>
     </footer>
-
-    <script src="js/main.js"></script>
-    <script src="js/cart.js"></script>
   </body>
 </html>
