--- a/pages/products.html
+++ b/pages/products.html
@@ -3,10 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Products</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Products</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
     <link rel="stylesheet" href="../css/products.css" />
@@ -28,7 +27,7 @@
       <!-- Navigation -->
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a href="/index.html" class="active">Home</a></li>
+          <li class="nav-item"><a href="../index.html" class="active">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
             <a href="categories.html">Categories</a>
